software in the public interest

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@
 /www.openkansas.us/projects/wikipedia
 /other/gnome.txt
 /other/eclipse.txt
+/other/Eclipse BYLAWS 2003_11_10 Final.html
+/other/Eclipse BYLAWS 2003_11_10 Final.pdf
+/other/Eclipse BYLAWS 2003_11_10 Final_ind.html
+/other/Eclipse BYLAWS 2003_11_10 Finals.html
+/other/spi.txt
+/other/wikimedia.wiki
+/other/wikimedia.wiki2
+/#bylaws.md#
