--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,13 @@
 /other/owasp.wiki2
 /other/python.html
 /other/python.txt
+/other/conservancy_by-laws-1_1.png
+/other/conservancy_by-laws-2_1.png
+/other/conservancy_by-laws-3_1.png
+/other/conservancy_by-laws-4_1.png
+/other/conservancy_by-laws.html
+/other/conservancy_by-laws.pdf
+/other/conservancy_by-laws_ind.html
+/other/conservancy_by-lawss.html
+/other/softwareconservancy.txt
+/other/total.md
